# slice_2d

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md
src/: cmp.rs  fill.rs  index.rs  iter.rs  lib.rs  slice.rs  split.rs  swap.rs  utils.rs
tests/: tests.rs
